/**
* @file:   sensitiveword.proto
* @author: jameyli <jameyli AT tencent DOT com>
* @brief:  这个文件是通过工具自动生成的，建议不要手动修改
*/

package TableProto;

message SensitiveWord{
    /** 对象id */
    required uint32 id = 1 [default = 0];
    /** 词语 */
    required string word = 2 [default = ""];
}

message SensitiveWord_ARRAY {
    repeated SensitiveWord items = 1;
}
